Editing code to remove warnings